<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_discover"
            android:title="@string/home"
            android:checked="true"
            android:icon="@drawable/ic_discover"

            />
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_movie"
            android:title="@string/movie"
            />
        <item
            android:id="@+id/nav_tv"
            android:icon="@drawable/ic_tv"
            android:title="@string/tv" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_people"
            android:title="@string/people" />
        <item
            android:id="@+id/nav_genre"
            android:icon="@drawable/ic_genre"
            android:title="@string/genre" />
    </group>
    <item android:title="@string/other">
        <menu>
            <item
                android:icon="@drawable/ic_app_rate"
                android:title="@string/rate" />

        </menu>
    </item>



</menu>
